# network-monitor

./: Dockerfile  LICENSE  README.md  dfinity-network-monitor.cabal  run.sh
app/: Main.hs
frontend/: app.js  package.json
frontend/client/: block-propagation-span.js  block-propagation.js  main.js
frontend/routes/: index.js
frontend/views/: index.jade  metric.jade
src/Dfinity/NetworkMonitor/: Client.hs  Metrics.hs  Server.hs  Types.hs
test/: test.hs
