name:                dfinity-network-monitor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dfinity/network-monitor
license:             BSD3
license-file:        LICENSE
author:              Derek Chiang
maintainer:          dc@dfinity.org
copyright:           BSD 3 Clause
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dfinity.NetworkMonitor.Types
                     , Dfinity.NetworkMonitor.Client
                     , Dfinity.NetworkMonitor.Server
                     , Dfinity.NetworkMonitor.Metrics
  build-depends:       base >= 4.7 && < 5
                     , aeson 
                     , binary
                     , BoundedChan
                     , containers
                     , lens
                     , lucid
                     , scotty
                     , wreq
  default-language:    Haskell2010


executable network-monitor-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , dfinity-network-monitor
  default-language:    Haskell2010


test-suite network-monitor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , dfinity-network-monitor
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dfinity/network-monitor
